[package]
name = "ruma-common"
version = "0.17.1"
description = "Common types for other ruma crates."
homepage = "https://ruma.dev/"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ruma/ruma"
edition = "2024"
rust-version = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[features]
# These feature gates exist only for the tests. Disabling them results in a
# compile error.
default = ["client", "server"]
client = []
server = []

api = ["dep:http", "dep:konst"]
js = ["dep:js-sys", "getrandom?/js", "uuid?/js"]
rand = ["dep:rand", "dep:getrandom", "dep:uuid"]

unstable-msc2666 = []
unstable-msc2870 = []
unstable-msc3768 = []
unstable-msc3930 = []
unstable-msc3931 = []
unstable-msc3932 = ["unstable-msc3931"]
unstable-msc4108 = []
unstable-msc4140 = []
unstable-msc4186 = []
# Thread subscriptions.
unstable-msc4306 = []
unstable-msc4388 = []

# Allow IDs to exceed 255 bytes.
compat-arbitrary-length-ids = ["ruma-identifiers-validation/compat-arbitrary-length-ids"]

# Don't validate `ServerSigningKeyVersion`.
compat-server-signing-key-version = ["ruma-identifiers-validation/compat-server-signing-key-version"]

# Allow some mandatory fields to be missing, defaulting them to an empty string
# in deserialization.
compat-empty-string-null = []

# Allow certain fields to be `null` for compatibility, treating that the same as
# the field being absent.
compat-null = []

# Allow certain fields to be absent even though the spec marks them as
# mandatory. Deserialization will yield a default value like an empty string.
compat-optional = []

[dependencies]
arcstr = { version = "1.2.0", default-features = false }
as_variant = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
form_urlencoded = "1.0.0"
getrandom = { version = "0.2.6", optional = true }
http = { workspace = true, optional = true }
indexmap = { version = "2.0.0", features = ["serde"] }
js_int = { workspace = true, features = ["serde"] }
konst = { version = "0.3.5", default-features = false, features = ["cmp", "iter", "parsing"], optional = true }
percent-encoding = "2.1.0"
rand = { workspace = true, optional = true }
regex = { version = "1.5.6", default-features = false, features = ["std", "perf"] }
ruma-identifiers-validation = { workspace = true }
ruma-macros = { workspace = true }
serde = { workspace = true }
serde_html_form = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
thiserror = { workspace = true }
time = "0.3.47"
tracing = { workspace = true, features = ["attributes"] }
url = { workspace = true }
uuid = { version = "1.0.0", optional = true, features = ["v4"] }
web-time = { workspace = true }
wildmatch = { workspace = true }
zeroize = { workspace = true }

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
assert_matches2 = { workspace = true }
assign = { workspace = true }
macro_rules_attribute = "0.2.2"
maplit = { workspace = true }
smol-macros = "0.1.1"
trybuild = "1.0.71"

[lints]
workspace = true
