[package]
categories = ["api-bindings", "web-programming"]
description = "A procedural macro used by the ruma-events crate."
edition = "2018"
homepage = "https://www.ruma.io/"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma-events-macros"
readme = "README.md"
repository = "https://github.com/ruma/ruma"
version = "0.24.6"

[lib]
proc-macro = true

[features]
compat = []

[dependencies]
proc-macro-crate = "1.0.0"
proc-macro2 = "1.0.24"
quote = "1.0.8"
syn = { version = "1.0.57", features = ["extra-traits", "full"] }
