[package]
categories = ["api-bindings"]
description = "Deprecated: crate merged into ruma-common"
homepage = "https://www.ruma.io/"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma-events"
readme = "README.md"
repository = "https://github.com/ruma/ruma"
version = "0.26.1"
edition = "2018"

[badges]
maintenance = { status = "deprecated" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
compat = ["ruma-events-macros/compat"]
markdown = ["pulldown-cmark"]

unstable-exhaustive-types = []
unstable-pdu = []
unstable-pre-spec = []
unstable-msc2448 = []
unstable-msc2675 = []
unstable-msc2676 = []
unstable-msc2677 = []

[dependencies]
criterion = { version = "0.3.3", optional = true }
indoc = "1.0"
js_int = { version = "0.2.0", features = ["serde"] }
pulldown-cmark = { version = "0.8", default-features = false, optional = true }
ruma-common = { version = "0.8.0", path = "../ruma-common" }
ruma-events-macros = { version = "=0.26.1", path = "../ruma-events-macros" }
ruma-identifiers = { version = "0.22.0", path = "../ruma-identifiers", features = ["serde"] }
ruma-serde = { version = "0.6.0", path = "../ruma-serde" }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = { version = "1.0.60", features = ["raw_value"] }
thiserror = "1.0.26"
wildmatch = "2.0.0"

[dev-dependencies]
assign = "1.1.1"
maplit = "1.0.2"
matches = "0.1.8"
ruma-identifiers = { version = "0.22.0", path = "../ruma-identifiers", features = ["rand"] }
trybuild = "1.0.38"

[[bench]]
name = "event_deserialize"
harness = false
