[package]
name = "ruma-html"
version = "0.1.0"
description = "Opinionated HTML parsing and manipulating."
homepage = "https://ruma.dev/"
keywords = ["matrix", "ruma", "html", "parser"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ruma/ruma"
edition = "2021"
rust-version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
as_variant = { workspace = true }
html5ever = "0.26.0"
phf = { version = "0.11.1", features = ["macros"] }
tracing = { workspace = true, features = ["attributes"] }
wildmatch = "2.0.0"
