[package]
name = "ruma-html"
version = "0.2.0"
description = "Opinionated HTML parsing and manipulating."
homepage = "https://ruma.dev/"
keywords = ["matrix", "ruma", "html", "parser"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ruma/ruma"
edition = "2021"
rust-version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
matrix = ["dep:ruma-common"]

[dependencies]
as_variant = { workspace = true }
html5ever = "0.27.0"
phf = { version = "0.11.1", features = ["macros"] }
ruma-common = { workspace = true, optional = true }
tracing = { workspace = true, features = ["attributes"] }
wildmatch = "2.0.0"

[dev-dependencies]
assert_matches2 = { workspace = true }
