[package]
name = "ruma-html"
version = "0.6.0"
description = "Opinionated HTML parsing and manipulating."
homepage = "https://ruma.dev/"
keywords = ["matrix", "ruma", "html", "parser"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ruma/ruma"
edition = "2024"
rust-version = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[features]
matrix = ["dep:ruma-common"]
unstable-msc4286 = []

[dependencies]
as_variant = { workspace = true }
html5ever = "0.35.0"
ruma-common = { workspace = true, optional = true }
tracing = { workspace = true, features = ["attributes"] }
wildmatch = "2.0.0"

[dev-dependencies]
assert_matches2 = { workspace = true }

[lints]
workspace = true
